[FEAT] add patients endpoints and general updates in system roles
