# app/Models/Patient.php
@@ -33,7 +33,7 @@ class Patient extends Model implements HasMedia
 
     protected static function booted(): void
     {
-        if (Auth::check() && !Auth::user()->hasRole('super admin'))
+        if (Auth::check() && !Auth::user()->hasRole('super admin') && !request()->has('clinicId'))
             self::query()->where('clinic_id' , Auth::user()->clinic_id);
     }
 
