# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\PatientController;
 use App\Http\Controllers\ReservationController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -16,6 +17,6 @@ Route::prefix('auth')->group(function (){
     Route::post('/logout' , [AuthController::class ,'logout'])->middleware('auth:sanctum');
 });
 
-
+Route::apiResource('/patients' , PatientController::class)->middleware('auth:sanctum');
 Route::apiResource('/reservations' , ReservationController::class)->middleware('auth:sanctum');
 Route::patch('/reservations/{reservation}/change-status' , [ReservationController::class , 'changeStatus'])->middleware('auth:sanctum');
